Fixed the width bug on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,17 @@
 body {
     background-color: white;
+    margin: 0;
+    padding: 0;
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
 
 #displayclick {
@@ -72,6 +82,7 @@ body {
 
 #rightSection {
     height: 100%;
+    min-width: 25.1%;
     width: 25.1%;
     position: absolute;
     top: 0px;
